--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@
 :root {
   --text-color: #333;
   --accent-color-green: #0a775f;
+  --accent-color-green-80: rgba(10, 119, 95, 0.8);
+  --accent-color-green-60: rgba(10, 119, 95, 0.6);
+  --accent-color-light-brown: #c99b67;
+  --accent-color-light-brown-80: rgb(201, 155, 103, 0.8);
+  --accent-color-light-brown-60: rgb(201, 155, 103, 0.6);
+  --light-brown: #f3d7b7;
   --outline-color: var(--accent-color-green);
 }
 
@@ -83,6 +89,49 @@ img {
 }
 
 
+/* BUTTON */
+.button {
+  display: inline-block;
+  padding: 16px 24px;
+  border: 0;
+  border-radius: 100px;
+  font-size: 16px;
+  line-height: normal;
+  font-weight: 500;
+  cursor: pointer;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  white-space: nowrap;
+}
+
+.button-green {
+  background-color: var(--accent-color-green);
+  color: #fff;
+}
+
+.button-green:hover {
+  background-color: var(--accent-color-green-80);
+}
+
+.button-green:active {
+  background-color: var(--accent-color-green-60);
+}
+
+.button-brown {
+  background-color: var(--accent-color-light-brown);
+  color: #fff;
+}
+
+.button-brown:hover {
+  background-color: var(--accent-color-light-brown-80);
+}
+
+.button-brown:active {
+  background-color: var(--accent-color-light-brown-60);
+}
+
+
 /* MAIN-CONTENT */
 .main-content {
   flex-grow: 1;
@@ -91,6 +140,7 @@ img {
 
 /* SITE-HEADER-INTRO-WRAPPER */
 .site-header-hero-wrapper {
+  background-color: var(--light-brown);
   background-image: url("../img/site-header-intro-bg.jpg");
 }
 
@@ -159,6 +209,53 @@ img {
 
 .sitenav-link:active {
   opacity: 0.6;
+}
+
+
+/* HERO */
+.hero {
+}
+.hero-container {
+  display: flex;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.hero-info-wrapper {
+  width: 100%;
+  max-width: 730px;
+  padding-top: 116px;
+  padding-bottom: 100px;
+  padding-left: 150px;
+  padding-right: 116px;
+}
+
+.hero-heading {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-size: 64px;
+  line-height: normal;
+  color: #000;
+}
+
+.hero-text {
+  margin: 0;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.hero-text:not(:last-child) {
+  margin-bottom: 34px;
+}
+
+.hero-img {
+  width: 710px;
+  height: 596px;
+  object-fit: cover;
+}
+
+.hero-img-index {
+  height: 696px;
 }
 
 
