--- a/css/styles.css
+++ b/css/styles.css
@@ -399,6 +399,90 @@ img {
 }
 
 
+/* HOW-IT-WORKS */
+.how-it-works-inner {
+  padding: 50px 30px;
+  background-color: var(--accent-color-green);
+  background-image: url("../img/green-bg.jpg");
+  text-align: center;
+}
+
+.how-it-works-heading {
+  margin-top: 0;
+  margin-bottom: 80px;
+  font-size: 50px;
+  line-height: normal;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.how-it-works-list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  margin-bottom: 60px;
+  margin-left: -20px;
+  text-align: left;
+  counter-reset: how-it-works;
+}
+
+.how-it-works-item {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% / 3 - 20px);
+  margin-left: 20px;
+  counter-increment: how-it-works;
+}
+
+.how-it-works-item::before {
+  width: 60px;
+  height: 60px;
+  border: 4px solid var(--accent-color-light-brown);
+  margin-bottom: 20px;
+  background-color: var(--light-bg);
+  text-align: right;
+  content: "";
+}
+
+.how-it-works-info {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 20px 40px;
+  background-color: var(--light-bg);
+}
+
+.how-it-works-info::before {
+  align-self: flex-end;
+  margin-bottom: 45px;
+  font-size: 64px;
+  line-height: normal;
+  content: "0"counter(how-it-works);
+}
+
+.how-it-works-step-title {
+  max-width: 250px;
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 40px;
+  line-height: normal;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.how-it-works-step-text {
+  margin: 0;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.how-it-works-cta:focus {
+  outline-color: var(--accent-color-light-brown);
+}
+
+
 /* RETINA BG */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
@@ -417,5 +501,9 @@ only screen and (                min-resolution: 2dppx) {
 
   .index-features-inner {
     background-image: url("../img/index-features-bg@2x.jpg");
+  }
+
+  .how-it-works-inner {
+    background-image: url("../img/green-bg@2x.jpg");
   }
 }
