--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
   font-family: "Roboto", "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.75;
@@ -254,7 +255,19 @@ img {
   margin-bottom: 34px;
 }
 
+.hero-img-wrapper {
+  position: relative;
+}
+
+.hero-badge {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translate(-50%, -50%);
+}
+
 .hero-img {
+  display: block;
   width: 710px;
   height: 596px;
   object-fit: cover;
@@ -271,6 +284,7 @@ img {
 }
 
 .index-collection-inner {
+  position: relative;
   padding: 50px 143px;
   background-color: var(--light-bg);
   background-image: url("../img/index-collection-bg.jpg");
@@ -331,6 +345,24 @@ img {
 
 .index-collection-text:not(:last-child) {
   margin-bottom: 10px;
+}
+
+.index-colleciton-leaves-left {
+  position: absolute;
+  left: -150px;
+  top: 40px;
+}
+
+.index-colleciton-leaves-right {
+  position: absolute;
+  right: -350px;
+  top: 685px;
+}
+
+.index-colleciton-leaves-left-light {
+  position: absolute;
+  left: -216px;
+  bottom: 170px;
 }
 
 
@@ -406,6 +438,7 @@ img {
 
 /* HOW-IT-WORKS */
 .how-it-works-inner {
+  position: relative;
   padding: 50px 30px;
   background-color: var(--accent-color-green);
   background-image: url("../img/green-bg.jpg");
@@ -434,6 +467,7 @@ img {
 }
 
 .how-it-works-item {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: calc(100% / 3 - 20px);
@@ -442,12 +476,25 @@ img {
 }
 
 .how-it-works-item::before {
+  position: relative;
+  z-index: 2;
   width: 60px;
   height: 60px;
   border: 4px solid var(--accent-color-light-brown);
   margin-bottom: 20px;
   background-color: var(--light-bg);
   text-align: right;
+  content: "";
+}
+
+.how-it-works-item:not(:last-child):after {
+  position: absolute;
+  left: 35px;
+  top: 30px;
+  width: 433px;
+  height: 3px;
+  background-image: url("../img/brown-dashed-stroke.svg");
+  background-repeat: no-repeat;
   content: "";
 }
 
@@ -485,6 +532,12 @@ img {
 
 .how-it-works-cta:focus {
   outline-color: var(--accent-color-light-brown);
+}
+
+.how-it-works-sticker {
+  position: absolute;
+  right: 68px;
+  top: 41px;
 }
 
 
